--- a/_styles/style4.css
+++ b/_styles/style4.css
@@ -12,7 +12,6 @@ body {
 
 .post {
     background-color: white;
-    border-radius: 12px;
     width: 90%;
     max-width: 600px;
     margin-bottom: 20px;
@@ -77,13 +76,25 @@ body {
     padding: 16px;
 }
 
-.description a {
-    color: #0077cc;
+.description a,
+.text a {
+    color: #F56A6A;
     text-decoration: none;
 }
 
-.description a:hover {
+.description a:hover,
+.text a:hover{
     text-decoration: underline;
+}
+
+.text{
+    font-size: 16px;
+    line-height: 1.7;
+    margin-top: 10px;
+    margin-bottom: 12px;
+    text-align: justify;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
 .post-footer {
