--- a/_layout/test4.html
+++ b/_layout/test4.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Test 2 Feed réseaux sociaux</title>
+  <title>Test 4 Feed réseaux sociaux</title>
   <link rel="stylesheet" href="../_styles/style4.css">
   <script>
     function updateElapsedTime(elementId, startDateStr) {
@@ -46,7 +46,7 @@
       <img src="../_sources/profillias.png" alt="Utilisateur"/>
     </div>
     <div class="post-info">
-      <div class="username">LIAS Laboratory</div>
+      <div class="username"><a href="https://www.instagram.com/p/DFpK-0EA2yW/"> LIAS Laboratory</a></div>
       <div class="userarobase">@lias_laboratory</div>
     </div>
   </div>
@@ -80,7 +80,6 @@
 
 
 <div class="post">
-
   <div class="post-ressources">
     <div class="text">
       {Jobs} <a href="https://www.linkedin.com/company/lias-lab/">Laboratoire LIAS</a>  propose un sujet de thèse Cifre avec l'entreprise <a href="https://www.linkedin.com/company/airbus/" target="_blank">Airbus Aircraft</a> « Sérialisation en temps logique de multiples simulations avioniques temps réel »
@@ -102,7 +101,7 @@
       <img src="../_sources/profillias.png" alt="Utilisateur" />
     </div>
     <div class="post-info">
-      <div class="username">LIAS Laboratory</div>
+      <div class="username"><a href="https://www.linkedin.com/posts/lias-lab_informatique-activity-7306220785151406080-7C2d/?utm_source=share&utm_medium=member_desktop&rcm=ACoAAFL9RB8BY9rPT2OnrMUWb2gbC0Da-lExOic">LIAS Laboratory</a></div>
     </div>
   </div>
 
