--- a/_styles/style4.css
+++ b/_styles/style4.css
@@ -56,6 +56,10 @@ body {
     color: #333;
 }
 
+.username a{
+    text-decoration: none;
+    color: #333;
+}
 .userarobase {
     font-size: 14px;
     color: #666;
