--- a/_layout/test3.html
+++ b/_layout/test3.html
@@ -83,7 +83,7 @@
     <div class="post-actions">
       <div class="share">
         <script>
-          const shareUrl = "https://monsite.com/page-exemple"; // ← change cette valeur selon la page
+          const shareUrl = "https://www.linkedin.com/posts/lias-lab_informatique-activity-7306220785151406080-7C2d?utm_source=share&utm_medium=member_desktop&rcm=ACoAAFL9RB8BY9rPT2OnrMUWb2gbC0Da-lExOic"; // ← change cette valeur selon la page
         </script>
         <div class="share-container" id="shareContainer">
           <button class="share-button" id="shareToggleBtn"><img src="https://img.icons8.com/?size=100&id=87729&format=png&color=000000" alt="Share" /></button>
